# risk-management-dashboard

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  __init__.py  __main__.py  app.py  config.py  domain.py  storage.py  utils.py
backend/mock/: __init__.py  client_orders.py  execution.py  feed.py  market_data.py
backend/web/: __init__.py  api.py  extensions.py  queries.py  serialization.py  websocket.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ConnectionBadge.tsx  KpiGrid.tsx  PnlChart.tsx  PositionsPanel.tsx  PriceBoard.tsx  RecentActivity.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/utils/: format.ts
tests/: test_db_and_queries.py  test_domain.py  test_execution.py  test_utils.py
