[project]
name = "finalto-risk-dashboard"
version = "0.1.0"
description = "MVP risk management dashboard for simulated client trading and book metrics."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-restx==1.3.0",
    "flask-sock==0.7.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
]

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]